# gemini-delegate

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
agents/: gemini-delegate.md
config/: gemini-delegate.toml
docs/: integration-roadmap.md
docs/superpowers/plans/: 2026-06-20-format-aware-output-and-transparency.md  2026-06-20-interactions-image-generation.md
docs/superpowers/specs/: 2026-06-20-format-aware-output-and-transparency-design.md  2026-06-20-interactions-image-generation-design.md
examples/: project-gemini.md
scripts/: smoke_test.py
src/gemini_delegate/: __init__.py  cli.py  config.py  core.py  image_backends.py  imaging.py  media.py  session.py
tests/: _helpers.py  conftest.py  test_auth.py  test_cli.py  test_config.py  test_core.py  test_envelope.py  test_image_backends.py  test_imaging.py  test_media.py  test_session.py
