[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemini-delegate"
version = "0.1.0"
description = "Delegate multimodal work (image/video to text, text to image) to the Google Gemini API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "matt", email = "matt@tbdengineer.ing" }]
# Runtime deps are deliberately minimal (CLAUDE.md §2.8): the Gemini SDK,
# the CLI framework, and Pillow for saving/inspecting generated images.
dependencies = [
  "google-genai>=1.0",
  "click>=8.1",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gemini-delegate = "gemini_delegate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_delegate"]

# Ship the packaged default config (CLAUDE.md §3, §9.2) inside the wheel so a
# real install can find it via importlib.resources. The canonical copy stays at
# the repo-root config/ per the §3 layout; config.py also resolves it relatively
# for editable installs (where this force-include path is not materialized).
[tool.hatch.build.targets.wheel.force-include]
"config/gemini-delegate.toml" = "gemini_delegate/data/gemini-delegate.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
